--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,8 @@ header{
   
   .resumehead {
     text-align: center;
+    color: white;
+    text-shadow: 2px 2px black;
   }
 
   img{
@@ -222,10 +224,18 @@ header{
     font-size: larger;
   }
 
+  .embedres{
+    position: relative;
+    overflow: hidden;
+    padding-top: 77.27%;
+  }
+
   div iframe{
-    display: block; 
-    min-width: max-content; 
-    min-height: max-content;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   /* div iframe{
