--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,12 @@ nav li{
   padding-right:20px;
 }
 
+nav li a:active{
+  display:inline;
+  padding-right:20px;
+  border-bottom: 3px solid black;
+}
+
 
 nav{
   background-color: #ddd;
