--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ nav li{
   padding-right:20px;
 }
 
-nav li a:active{
+nav ul li a.active-page{
   display:inline;
   padding-right:20px;
   border-bottom: 3px solid black;
