--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ h1{
   text-align: center;
   color: black;
   mix-blend-mode: color-burn;
+  text-shadow: 1px 1px 1px 1px solid white;
 }
 
 h2{
@@ -55,6 +56,7 @@ header p{
   text-align: center;
   text-shadow: 2px 2px #ffffff;
   mix-blend-mode: color-burn;
+  text-shadow: 1px 1px 1px 1px solid white;
 }
 /*END STARTER CSS - DO NO CHANGE*/
 
@@ -121,6 +123,7 @@ header{
   margin-bottom: 25px;
   /*Req 6b*/
   background-image: url("../images/header.jpg");
+  filter: brightness(140%);
   /*Set background-image to header.jpg */
 }
 /*Req 7a*/
