--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,17 @@ header p{
 }
 /*END STARTER CSS - DO NO CHANGE*/
 
-div iframe{
+/* div iframe{
   display: block; 
   min-width: max-content; 
   min-height: 100%;
+} */
+
+iframe {
+  width: 100%;
+  height: 100%;
+  position:relative;
+
 }
 
 /*Req 1*/
@@ -163,7 +170,6 @@ header{
   text-align: center;
   color: black;
   font-size: larger;
-  text-shadow: 2px 2px white;
 }
 
 /*Req 9*/
@@ -185,7 +191,7 @@ header{
   text-align: center;
   color: black;
   font-size: larger;
-  text-shadow: 2px 2px white;
+  /* text-shadow: 2px 2px white; */
 }
 /* Create four equal columns that sits next to each other */
 .column {
@@ -200,11 +206,16 @@ header{
   width: 100%;
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
+/*TABLET VIEW Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
     flex: 50%;
     max-width: 50%;
+  }
+  nav{
+    padding: 30px 0px;
+    /*Your code here:*/
+    text-align: left;
   }
 }
 
@@ -239,13 +250,13 @@ header{
     overflow: hidden;
   }
 
-  div iframe{
+  /* div iframe{
     position: absolute;
     top: 0;
     left: 0;
     width: 120%;
     height: 100%;
-  }
+  } */
 
   /*Req 10*/
   nav{
@@ -314,13 +325,13 @@ header{
     overflow: hidden;
   }
 
-  div iframe{
+  /* div iframe{
     position: absolute;
     top: 0;
     left: 0;
     width: 120%;
     height: 100%;
-  }
+  } */
 
   /*Req 10*/
   nav{
