--- a/css/html5reset.css
+++ b/css/html5reset.css
@@ -24,7 +24,7 @@ time, mark, audio, video {
     outline:0;
     font-size:100%;
     vertical-align:baseline;
-    background:transparent;
+    /* background:transparent; */
 }
 
 body {
@@ -55,7 +55,7 @@ a {
     padding:0;
     font-size:100%;
     vertical-align:baseline;
-    background:transparent;
+    /* background:transparent; */
 }
 
 /* change colours to suit your needs */
