--- a/css/style.css
+++ b/css/style.css
@@ -243,12 +243,17 @@ header{
   }
   
   .resume {
-    display: block;
-    width: 35%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
     max-height: 60%;
     
+  }
+
+  .resumehead {
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px black;
   }
   
   .res_text {
